   - Moved all the classes in org.freeforums.geforce.securitycraft.interfaces to org.freeforums.geforce.securitycraft.api.
   - Moved CustomizableSCTE from org.freeforums.geforce.securitycraft.tileentity to org.freeforums.geforce.securitycraft.api.
   - Modified the build.gradle file to also generate deobfuscated and raw source .jar files when building.
 - New: Password-protected chests now have a custom christmas texture.
 - New: Added new Creative Tab for decoration blocks (Reinforced blocks/iron fence etc.)
 - New: Keycard readers now emit redstone particles like laser blocks when active.
 - New: Alarms can now be placed on all sides of a block.
 - New: Keeping a username logger powered now constantly logs players instead of just logging once when receiving a redstone pulse.
 - New: Codebreakers can now be used on password-protected furnaces.
 - New: Claymores now have crafting recipes.
 - Change: Electrified Iron Fence Gates now hurts any entity except dropped items and its owner.
 - Change: Changed keypad recipe to use iron ingots instead of iron blocks.
 - Change: Right-clicking the frame with a key panel now creates a keypad. Right-clicking the frame with a bound camera monitor now shows the camera's view.
 - Change: The frame now uses an iron block texture instead of a stone texture.
 - Change: Removed the keypad's recipe (unless the "useOldKeypadRecipe" config option is selected).
 - Change: Changed the frame's recipe to use iron ingots instead of stone blocks.
 - Change: Changed the password-protected furnace recipe.
 - Fix: Adapted the keypad frame's model to the one used in SecurityCraft for Minecraft 1.8.
 - Fix: Lasers could be broken by players who didn't place them.
 - Fix: Using different window sizes and resolutions cause the buttons in the Universal Block Modifier GUI to move.
 - Fix: Rotation of keypad frames and password-protected furnaces in inventory.
 - Fix: Bouncing Betty's owners get set to "owner".