@@ -1,11 +1,10 @@
 package org.freeforums.geforce.securitycraft.containers;
 
+import org.freeforums.geforce.securitycraft.tileentity.TileEntityInventoryScanner;
+
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.inventory.IInventory;
 import net.minecraft.inventory.Slot;
 import net.minecraft.item.ItemStack;
-
-import org.freeforums.geforce.securitycraft.tileentity.TileEntityInventoryScanner;
 
 public class SlotRestricted extends Slot {
 	
