@@ -3,6 +3,7 @@ package org.freeforums.geforce.securitycraft.gui;
 import net.minecraft.client.gui.GuiButton;
 import net.minecraft.client.gui.GuiTextField;
 import net.minecraft.client.gui.inventory.GuiContainer;
+import net.minecraft.client.resources.I18n;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.inventory.IInventory;
 import net.minecraft.util.EnumChatFormatting;
@@ -32,11 +33,12 @@ public class GuiInventoryScanner extends GuiContainer
 	private GuiButton saveAndContinueButton;
 	private GuiButton typeButton;
 
-    public GuiInventoryScanner(IInventory par1IInventory, TileEntityInventoryScanner par2TileEntity, EntityPlayer par3EntityPlayer)
-    {
+    public GuiInventoryScanner(IInventory par1IInventory, TileEntityInventoryScanner par2TileEntity, EntityPlayer par3EntityPlayer){
         super(new ContainerInventoryScanner(par1IInventory, par2TileEntity));
         this.tileEntity = par2TileEntity;
         this.playerObj = par3EntityPlayer;
+        this.xSize = 176;
+        this.ySize = 196;
     }
     
     public void initGui(){
@@ -44,7 +46,7 @@ public class GuiInventoryScanner extends GuiContainer
     	Keyboard.enableRepeatEvents(true); 		
     		
 		if(playerObj.getGameProfile().getId().toString().matches(this.tileEntity.getOwnerUUID())){
-			this.buttonList.add(this.typeButton = new GuiButton(0, this.width / 2 - 83, this.height / 2 - 48, 166, 20, this.tileEntity.getType().contains("check") ? "Check inventory." : "Emit redstone."));
+			this.buttonList.add(this.typeButton = new GuiButton(0, this.width / 2 - 83, this.height / 2 - 63, 166, 20, this.tileEntity.getType().contains("check") ? "Check inventory." : "Emit redstone."));
 		}
     }
     
@@ -54,20 +56,20 @@ public class GuiInventoryScanner extends GuiContainer
 		
 		if(!this.buttonList.isEmpty()){
 			if(((GuiButton)this.buttonList.get(0)).displayString.matches("Check inventory.")){
-				this.fontRendererObj.drawString("This setting will check a player's", this.width / 2 - 83, this.height / 2 - 23, 4210752);
-				this.fontRendererObj.drawString("inventory, and, if it contains a ", this.width / 2 - 83, this.height / 2 - 13, 4210752);
-				this.fontRendererObj.drawString("prohibited item, will delete the", this.width / 2 - 83, this.height / 2 - 3, 4210752);
-				this.fontRendererObj.drawString("item from the player's inventory.", this.width / 2 - 83, this.height / 2 + 7, 4210752);
+				this.fontRendererObj.drawString("This setting will check a player's", this.width / 2 - 83, this.height / 2 - 38, 4210752);
+				this.fontRendererObj.drawString("inventory, and, if it contains a ", this.width / 2 - 83, this.height / 2 - 28, 4210752);
+				this.fontRendererObj.drawString("prohibited item, will delete the", this.width / 2 - 83, this.height / 2 - 18, 4210752);
+				this.fontRendererObj.drawString("item from the player's inventory.", this.width / 2 - 83, this.height / 2 - 8, 4210752);
 			}else{
-				this.fontRendererObj.drawString("This setting will check a player's", this.width / 2 - 83, this.height / 2 - 23, 4210752);
-				this.fontRendererObj.drawString("inventory, and, if it contains a ", this.width / 2 - 83, this.height / 2 - 13, 4210752);
-				this.fontRendererObj.drawString("prohibited item, will emit a", this.width / 2 - 83, this.height / 2 - 3, 4210752);
-				this.fontRendererObj.drawString("redstone signal for 3 seconds.", this.width / 2 - 83, this.height / 2 + 7, 4210752);	
+				this.fontRendererObj.drawString("This setting will check a player's", this.width / 2 - 83, this.height / 2 - 38, 4210752);
+				this.fontRendererObj.drawString("inventory, and, if it contains a ", this.width / 2 - 83, this.height / 2 - 28, 4210752);
+				this.fontRendererObj.drawString("prohibited item, will emit a", this.width / 2 - 83, this.height / 2 - 18, 4210752);
+				this.fontRendererObj.drawString("redstone signal for 3 seconds.", this.width / 2 - 83, this.height / 2 - 8, 4210752);	
 			}
 		}else{
 			if(this.tileEntity.getType() != null && this.tileEntity.getType() != ""){
-				this.fontRendererObj.drawString("This scanner is set to:", 130, 75, 4210752);
-				this.fontRendererObj.drawString((this.tileEntity.getType().matches("check") ? "Check inventory." : "Emit redstone."), 130, 85, 4210752);
+				this.fontRendererObj.drawString("This scanner is set to:", this.width / 2 - 83, this.height / 2 - 61, 4210752);
+				this.fontRendererObj.drawString((this.tileEntity.getType().matches("check") ? "Check inventory." : "Emit redstone."), this.width / 2 - 83, this.height / 2 - 51, 4210752);
 				
 			}
 		}
@@ -121,6 +123,7 @@ public class GuiInventoryScanner extends GuiContainer
     {
         this.fontRendererObj.drawString("Prohibited Items", 8, 6, 4210752);
         this.fontRendererObj.drawString(playerObj.getGameProfile().getId().toString().matches(this.tileEntity.getOwnerUUID()) ? (EnumChatFormatting.UNDERLINE + "Admin Mode") : (EnumChatFormatting.UNDERLINE + "View Mode"), 112, 6, 4210752);
+        this.fontRendererObj.drawString(I18n.format("container.inventory", new Object[0]), 8, this.ySize - 93, 4210752);
     }
 	
 	protected void drawGuiContainerBackgroundLayer(float f, int i, int j) {
@@ -128,7 +131,7 @@ public class GuiInventoryScanner extends GuiContainer
         this.mc.getTextureManager().bindTexture(field_110410_t);
         int k = (this.width - this.xSize) / 2;
         int l = (this.height - this.ySize) / 2;
-        this.drawTexturedModalRect(k, l, 0, 0, this.xSize, this.ySize);
+        this.drawTexturedModalRect(k, l, 0, 0, this.xSize, this.ySize + 30);
 	}
 
 
